# ScarecrowEyes

./: CMakeLists.txt  README.md  package.xml
imgs/: hardware
launch/: scarecrow_eye_node.launch
scripts/: camerasync.py
scrpit/: camerasync.py
src/: scarecrow_eye_node.cpp  scarecrow_eye_node_1.cpp
src/CameraDisplay/: CMakeLists.txt
src/CameraSync/: CMakeLists.txt  camerasync.cpp  test.cpp
src/IMURead/: CMakeLists.txt  ICM20948.cpp  ICM20948.h
src/StereoCamerasCalibration/: CMakeLists.txt
